[package]
name = "armv6-m-instruction-parser"
authors = ["Erik Serrander"]
description = "A crate for parsing ARMv6-M thumb instructions. Usefull for decompilition and emulation etc."
repository = "https://github.com/s7rul/armv6-m-instruction-parser"
license = "MIT"
version = "0.3.0-rc1"
edition = "2021"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"